# wordle-task

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dokerfile  GameState.cxx  GameState.h  README.md  WidgetButtons.cxx  WidgetButtons.h  WidgetGame.cxx  WidgetGame.h  WidgetKeyboard.cxx  WidgetKeyboard.h  build_debug.sh  build_script.sh  main.cxx  test_vm_deps.sh  words.txt
client_bash/: README.md
client_qt/: CMakeLists.txt  README.md
client_qt/deploy/: rebuild.sh
client_qt/scripts/: build_debug.sh  build_script.sh
client_qt/src/: GameState.h  WidgetButtons.h  main.cxx
deploy/: rebuild.sh  run_python_http_server_wasm.sh  wordle-task.desktop
deploy/symlink/: wordle-task
scripts/: docker_cleanup.sh  install_clang.sh  install_cmake.sh  install_docker.sh  prepare_debian_10.sh
server_http/: CMakeLists.txt  README.md
server_http/configs/: config_vars.yaml  static_config.yaml
server_http/src/: http_handler_subdomain_static.cpp  http_handler_subdomain_static.hpp  main.cpp
server_iam/: README.md
server_stat/: README.md
site_repotest_ru/: CMakeLists.txt  main.cpp
tests/: README.md
